--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="Services_sec" id="services">
             <div class="Center">
                 <h2>Nos Services</h2>
-                <p> <span>Transport</span><br><span>Chambres Hotels</span><br><span>Park D'enfants</span><br><span>restoration</span><br></p>		
+                <p> <span>Transport</span><br><span>Chambres Hotels</span><br><span>Park D'enfants</span><br><span>Restoration</span><br></p>		
                 <div class="Line"></div>
               
                 <div class="Serviceside">
@@ -234,7 +234,7 @@
 	                    <li class="Development"><a href="#services"><h4>Développement<br>technologique avancé<br></h4></a></li>
     	                <li class="Desdin"><a href="#services"><h4>Conception<br>artistique et graphique<br></h4></a></li>
 	                    <li class="Concept"><a href="#services"><h4>Conceptualisation <br>créative<br></h4></a></li>
-	                    <li class="System"><a href="#services"><h4>Innovantion</h4></a></li>
+	                    <li class="System"><a href="#services"><h4>Innovantion<br>Intelligente</h4></a></li>
                     </ul>
                 </div>
              
